index.html and README.md and recipes

--- a/recipes/Puff_Pastry.html
+++ b/recipes/Puff_Pastry.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Puff Pastry Roast Beef Pot</h1>
         <p><h2><a href="../index.html">back</a></h2></p>
-        <<img src="./Pie.jpg"
+        <img src="./Pie.jpg">
         
         <p><h2>Ingredients</h2></p>
         <ul>
