--- a/recipes/Cornbread.html
+++ b/recipes/Cornbread.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Puff Pastry Roast Beef Pot</h1>
         <p><h2><a href="../index.html">back</a></h2></p>
-        <<img src="./Cornbread.jpg"
+        <img src="./Cornbread.jpg">
         
         <p><h2>Ingredients</h2></p>
         <ul>
