--- a/recipes/Iron_Pizza.html
+++ b/recipes/Iron_Pizza.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Deep-Dish Cast Iron Pizza</h1>
         <p><h2><a href="../index.html">back</a></h2></p>
-        <<img src="./Pizza.jpg"
+        <img src="./Pizza.jpg">
         
         <p><h2>Ingredients</h2></p>
         <ul>
